<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="60dp"
        android:background="@color/blueBlack"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/network_error"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/messageTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTV"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/an_error_occured_while_loading_data_please_check_your_interneet_connectivity"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/messageTV"
            android:layout_margin="5dp"
            android:background="@drawable/yellow_box"
            android:text="@string/retry"
            android:textColor="@color/blueBlack" />
    </RelativeLayout>
</RelativeLayout>